--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,20 +14,25 @@ build:
   number: 0
   noarch: python
   script: {{ PYTHON }} -m pip install . -vv
+  skip: true  # [py<37]
 
 requirements:
   host:
     - pip
-    - python >=3.7
+    - python
+    - setuptools
+    - wheel
   run:
-    - python >=3.6
+    - python
     - numpy >=1.14.6
-    - pandas >=0.25.*
+    - pandas >=0.25.0
     - scikit-learn >=0.20.*
     - statsmodels >=0.10.*
-    - requests
+
 
 test:
+  source_files:
+    - tests
   imports:
     - autots
     - autots.datasets
