--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -38,18 +38,22 @@ test:
     - autots.datasets
   commands:
     - pip check
+    - pytest -vv .
   requires:
     - pip
+    - pytest
 
 about:
   home: https://github.com/winedarksea/AutoTS
   summary: Automated Time Series Forecasting
   license: MIT
   license_file: LICENSE
+  license_family: MIT
   description: |
     AutoTS is a time series package for Python designed for rapidly deploying 
     high-accuracy forecasts at scale.
-  doc_url: https://github.com/winedarksea/AutoTS
+  doc_url: https://winedarksea.github.io/AutoTS
+  dev_irl: https://github.com/winedarksea/AutoTS
 
 extra:
   recipe-maintainers:
