--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,9 +12,9 @@ source:
 
 build:
   number: 0
-  noarch: python
   script: {{ PYTHON }} -m pip install . --no-deps -vv --no-build-isolation
-  skip: true  # [py<37]
+  # skipping s390x due to test dependencies not being on platform
+  skip: true  # [py<37 or s390x]
 
 requirements:
   host:
